# bollard

./: .bollard.yml  .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEGACY_API_MISMATCHES.md  README.md  SECURITY.md  biome.json  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stryker.config.json  tsconfig.json  vitest.adversarial.config.ts  vitest.config.ts  vitest.contract.config.ts  vitest.stryker.config.ts
.bollard/: .gitignore  cost-baseline.json  eval-baseline.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile.verify  Dockerfile.verify-go  Dockerfile.verify-jvm  Dockerfile.verify-python  Dockerfile.verify-rust
docs/: context-hints.md  retro-adversarial-results.md
examples/: bollard.yml
phase3-artifacts/: gradle-phase4.sh  run2-post-fix.sh  setup-and-run.sh
scripts/: bollard-metrics-run.sh  retro-adversarial.ts
scripts/extract_rs/: Cargo.toml
scripts/extract_rs/src/: extract.rs  main.rs
spec/: 01-architecture.md  02-bootstrap.md  03-providers.md  04-configuration.md  05-risk-model.md  06-toolchain-profiles.md  07-adversarial-scopes.md  08-contract-tester-grounding.md  09-model-selection.md  README.md  ROADMAP.md  adversarial-acceptance-criteria-prompt.md  pass4-return-type-fix-prompt.md  self-test-breakdown-results.md  self-test-cap-results.md  self-test-exceeded-results.md  self-test-floor-results.md  self-test-history.md  self-test-humanreadable-results.md  self-test-isunlimited-results.md  self-test-limit-accessor-results.md  self-test-merge-results.md  stage1.5-prompt.md  (+31 more)
(+157 files in other folders)
