[package]
name = "bollard-extract-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bollard-extract-rs"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "printing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
